Fix z-index issues for menu bar/shadow

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -15,7 +15,7 @@ html {
 
 .menu-bkgd {
     position: fixed;
-    z-index: -1;
+    z-index: 99;
     width: 100%;
     height: 3rem;
     background-color: white;
