--- a/client/src/components/Menu.scss
+++ b/client/src/components/Menu.scss
@@ -2,6 +2,7 @@
 
 .Menu {
     position: fixed;
+    z-index: 100;
     padding: 0.25rem 8rem;
     left: 0;
     right: 0;
